# graphics-playground

./: .gitignore  CMakeLists.txt  README.md  flake.nix
data/shaders/triangle/: tri.frag  tri.vert
src/: arcball.camera.cc  arcball.camera.hpp  error.hpp  geometry.loader.cc  geometry.loader.hpp  main.cc  renderer.common.hpp  small_vector.cc  small_vector.hpp
